...
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:layout_marginBottom="8dp"
        android:hint="@string/AboutMyself"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/submit_activity2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_email"
        app:layout_constraintVertical_bias="0.348" />

    <EditText
        android:id="@+id/change_age"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_below="@+id/change_about"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
...
