...

        android:drawableStart="@drawable/ic_person_black_24dp"
        android:layout_marginTop="10dp"

        />
    <TextView
        android:id="@+id/UserAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/UserFullName"
        android:padding="2dp"
        android:textSize="18sp"
...
        android:textAllCaps="false"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp"
        tools:ignore="PrivateResource" />

    <Button
        android:id="@+id/ChangeDetails"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ChangePass"
        android:layout_marginStart="202dp"
        android:layout_marginTop="18dp"
...
