<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <EditText
        android:id="@+id/change_password1"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:inputType="number"
        android:hint="@string/enterPass"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <EditText
        android:id="@+id/change_password2"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:layout_below="@+id/change_password1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:inputType="number"
        android:hint="@string/enterPassAgain"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/submit_activity1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password1"
        />

    <Button
        android:id="@+id/submit_activity1"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_below="@+id/change_password2"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="170dp"
        android:background="@drawable/buttons"
        android:text="@string/changePass"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password2"
        />


</androidx.constraintlayout.widget.ConstraintLayout>